sampling design started

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -120,15 +120,15 @@
 		  		<div class="row group">
 			  		<div class="row group-header">
 			  			<div class="col-md-2 col-md-offset-2">
-			  				Data
+			  				Data import
 			  			</div>
 			  			<div class="col-md-7"></div>
 			  		</div>
 		  			<div class="row group-buttons">
-			 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect import</button>
+			 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect</button>
 			 			<button type="button" class="btn btn-default btn-home" href="aoi.html">Areas of interest</button>
-			 			<button type="button" class="btn btn-default btn-home" href="strata.html">Strata</button>
-			 			<button type="button" class="btn btn-default btn-home" href="phase1.html">Phase 1 plots</button>
+<!-- 			 			<button type="button" class="btn btn-default btn-home" href="strata.html">Strata</button> -->
+<!-- 			 			<button type="button" class="btn btn-default btn-home" href="phase1.html">Phase 1 plots</button> -->
 		  			</div>
 		  		</div>
 		  		
