--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -12,7 +12,7 @@
    	<link rel="stylesheet" href="css/bootstrap.css" media="screen">
 	<link rel="stylesheet" href="css/bootswatch.min.css">
 	<link rel="stylesheet" href="css/font-awesome-3.2.1.min.css">
-	<link rel="stylesheet" href="css/font-awesome-4.0.1.min.css">
+	<link rel="stylesheet" href="css/font-awesome-4.0.3.min.css">
 	<link rel="stylesheet" href="css/twitter-typeahead.css">
 	<link rel="stylesheet" href="css/bootstrap-combobox.css">
 	<link rel="stylesheet" href="css/calc-bootstrap-combobox.css">
@@ -367,6 +367,7 @@
 	<script src="./js/calc/manager/data/table-data-provider.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-test-data-provider.js"></script>
 	<script src="./js/calc/manager/data/csv-table-import-manager.js"></script>
+	<script src="./js/calc/manager/data/table-join.js"></script>
 	
 	<!-- ui managers -->
 	<script src="./js/calc/manager/ui/home-calculation-manager.js"></script>
