--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -368,6 +368,7 @@
 	<script src="./js/calc/manager/data/calculation-step-test-data-provider.js"></script>
 	<script src="./js/calc/manager/data/csv-table-import-manager.js"></script>
 	<script src="./js/calc/manager/data/table-join.js"></script>
+	<script src="./js/calc/manager/data/table-column-selector.js"></script>
 	
 	<!-- ui managers -->
 	<script src="./js/calc/manager/ui/home-calculation-manager.js"></script>
