re-enabled aggegation section.

--- a/calc-webapp/src/main/webapp/aggregation.html
+++ b/calc-webapp/src/main/webapp/aggregation.html
@@ -1,6 +1,6 @@
 <div class="page-section">
 
-	<div class="col-md-8 col-md-offset-2" style="text-align: left; padding-top: 20px;" id="sampling-design">
+	<div class="col-md-8 col-md-offset-2" style="text-align: left; padding-top: 20px;" id="aggregation-settings">
 		<div class="row col-md-12">
 			<div class="form-group">
 					<label class="col-md-2 control-label">Sampling Unit</label>
@@ -40,7 +40,7 @@
 	<script>
 	$(function() {
 
-		var manager = new SamplingDesignManager( $("#sampling-design") );
+		var manager = new AggregationManager( $("#aggregation-settings") );
 		
 	});
 	</script>
