rolap schema generation

--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -61,7 +61,7 @@
 							</div>
 							
 							<div class="row import-section height100 no-padding no-margin">
-								<div class="col-md-12" style="max-height: 80%; overflow: auto;">
+								<div class="col-md-12" style="overflow: auto;">
 									<table style="width:100%" class="import-csv-table">
 										<thead>
 										</thead>
