ui improvements of data vis

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -218,7 +218,7 @@
 	<!-- Results section -->
 	<div class="row" id="calculation-step-results-container" style="width: 100%; height: 93%; padding-top:10px; ">
 		<div class="row" style="height: 100%;">
-			<div class="col-md-10 col-md-offset-1 results-container" style="height: 97%">
+			<div class="col-md-12 results-container" style="height: 97%">
 			</div>
 		</div>
 	</div>
