--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -242,8 +242,10 @@
 							<select class="form-control"></select>
 					  	</div>
 					  	<div class="width100">
-					  		<button class="btn blue-btn" name="q-btn">Q</button>
-					  		<button class="btn blue-btn" name="c-btn">C</button>
+					  		<button class="btn blue-btn" name="q-btn" 
+					  			data-toggle="tooltip" data-placement="top" title="Quantitative variables" data-animation="true" data-delay="1">Q</button>
+					  		<button class="btn blue-btn" name="c-btn"
+					  			data-toggle="tooltip" data-placement="top" title="Categorical variables">C</button>
 					  	</div>
 					  	<div class="quantities width100"></div>
 					  	<div class="categories width100"></div>
