ui improvements of data vis / bug fixes on combobox

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -238,7 +238,7 @@
 					      <button class="btn blue-btn table-btn">Data table</button>
 					  </div>
 					  <div class="data-table-options collapse in" >
-					  	<div class="entity-select width100">
+					  	<div class="entity-select col-md-12">
 							<select class="form-control"></select>
 					  	</div>
 					  	<div class="width100">
@@ -250,7 +250,7 @@
 					  	<div class="quantities width100"></div>
 					  	<div class="categories width100"></div>
 					  	<div class="view-results-btn">
-					  		<button class="btn btn-default">View</button>
+					  		<button class="btn btn-default">View <i class="fa fa-caret-right"></i></button>
 					  	</div>
 					  </div>
 					  
@@ -258,12 +258,12 @@
 					      <button class="btn blue-btn scatter-btn">Scatter chart</button>
 					  </div>
 					  <div class="scatter-options collapse">
-					    <div class="entity-select width100" >
+					    <div class="entity-select col-md-12">
 							<select class="form-control"></select>
 					  	</div>
 					  	<div class="quantities width100"></div>
 					  	<div class="view-results-btn">
-					  		<button class="btn btn-default">View</button>
+					  		<button class="btn btn-default">View <i class="fa fa-caret-right"></i></button>
 					  	</div>
 					  </div>
 				</div>
@@ -371,6 +371,7 @@
 	<script src="./js/bootstrap/tooltip.js"></script>
 	<script src="./js/bootstrap/collapse.js"></script>
 	<script src="./js/bootstrap/transition.js"></script>
+	<script src="./js/bootstrap/popover.js"></script>
 	<script src="./js/bootstrap/plugin/bootstrap-combobox.js"></script>
 	
 	<!-- d3 -->
