Improvements on main page scrolling

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -149,8 +149,8 @@
 	  		</div>
 	  	</div>
 	  	
-	  	<div class="footer-placeholder">
-	  	</div>
+<!-- 	  	<div class="footer-placeholder"> -->
+<!-- 	  	</div> -->
 	</div>
   	
 	<!--  ==== End container ==== -->
