--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -284,9 +284,12 @@
 				<div class="row data-table no-margin">
 					<!-- pagination -->
 					<div class="row no-margin">
+						<div class="col-md-1 data-table-buttons no-padding">
+							<button class="btn default-btn csv-export"><i class="fa fa-download"> CSV</i></button>
+						</div>
 						<div class="col-md-3 col-md-offset-7 data-table-pagination">
 						</div>
-						<div class="col-md-2 data-table-buttons no-padding">
+						<div class="col-md-1 data-table-buttons no-padding">
 							<button class="btn default-btn prev"><i class="icon-angle-left"></i></button>
 							<button class="btn default-btn next"><i class="icon-angle-right"></i></button>			
 						</div>
