data-vis data filtering work in progress

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -337,6 +337,21 @@
 		
 	</div>
 
+
+	<div class="variable-filter-popover" id="variable-filter-popover">
+		<div class="float-left arrow">
+			<i class="fa fa-caret-left"></i>
+		</div>
+		<div class="float-left content">
+			<div class="width100 conditions"></div>
+			<div class="width50 float-left buttons">
+				<button class="btn btn-default" name="apply">Apply</button>
+			</div>
+			<div class="width50 float-left buttons">
+				<button class="btn btn-default" name="reset">Reset</button>
+			</div>
+		</div>
+	</div>
 	<!-- ===================================================== -->
     <!-- =============== JavaScript Libraries ================ -->
     <!-- ===================================================== -->
@@ -397,6 +412,7 @@
 	<script src="./js/calc/ui/progress-bar.js"></script>
 	<script src="./js/calc/ui/option-button.js"></script>
 	<script src="./js/calc/ui/job-status.js"></script>
+	<script src="./js/calc/ui/variable-filter-button.js"></script>
 	
 	<!-- model objects -->
 	<script src="./js/calc/model/workspace.js"></script>
