data-vis: added category selections

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -423,6 +423,7 @@
 	
 	<!-- data managers -->
 	<script src="./js/calc/manager/data/workspace-manager.js"></script>
+	<script src="./js/calc/manager/data/variable-manager.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-manager.js"></script>
 	<script src="./js/calc/manager/data/job-manager.js"></script>
 	<!-- data manipulation managers -->
