final ui fixes on data table

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -311,15 +311,15 @@
 						</div>
 					</div>
 					<!-- data table -->
-					<div class="row no-margin">
-						<div class="col-md-12 no-padding">
+					<div class="row no-margin height95" style="overflow: hidden">
+<!-- 						<div class="col-md-12 no-padding"> -->
 							<table class="table table-results">
 						        <thead>
 						        </thead>
 						        <tbody>
 						        </tbody>
 					      	</table>
-			      		</div>
+<!-- 			      		</div> -->
 					</div>
 				</div>
 				
