final ui fixes on data table

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -234,14 +234,15 @@
 			<div class="col-md-2 height100">
 				<!-- accordion selection -->
 				<div class="data-vis-options height100">
+				
 					  <div class="heading height5">
 					      <button class="btn blue-btn table-btn">Data table</button>
 					  </div>
 					  <div class="data-table-options collapse in" >
-					  	<div class="entity-select col-md-12">
+					  	<div class="entity-select col-md-12 height10">
 							<select class="form-control"></select>
 					  	</div>
-					  	<div class="width100">
+					  	<div class="width100 height5 variable-type-selector">
 					  		<button class="btn blue-btn" name="q-btn" 
 					  			data-toggle="tooltip" data-placement="top" title="Quantitative variables"  data-trigger="hover" data-animation="false" data-delay="0">Q</button>
 					  		<button class="btn blue-btn" name="c-btn"
@@ -249,7 +250,7 @@
 					  	</div>
 					  	<div class="quantities width100"></div>
 					  	<div class="categories width100"></div>
-					  	<div class="view-results-btn">
+					  	<div class="view-results-btn height10">
 					  		<button class="btn btn-default">View <i class="fa fa-caret-right"></i></button>
 					  	</div>
 					  </div>
@@ -258,10 +259,10 @@
 					      <button class="btn blue-btn scatter-btn">Scatter chart</button>
 					  </div>
 					  <div class="scatter-options collapse" >
-					  	<div class="entity-select col-md-12">
+					  	<div class="entity-select col-md-12 height10">
 							<select class="form-control"></select>
 					  	</div>
-					  	<div class="width100">
+					  	<div class="width100 height5 variable-type-selector">
 					  		<button class="btn blue-btn" name="q-btn" 
 					  			data-toggle="tooltip" data-placement="top" title="Quantitative variables" data-animation="true" data-delay="0">Q</button>
 					  		<button class="btn blue-btn" name="c-btn"
@@ -269,7 +270,7 @@
 					  	</div>
 					  	<div class="quantities width100"></div>
 					  	<div class="categories width100"></div>
-					  	<div class="view-results-btn">
+					  	<div class="view-results-btn height10">
 					  		<button class="btn btn-default">View <i class="fa fa-caret-right"></i></button>
 					  	</div>
 					  </div>
@@ -311,7 +312,7 @@
 						</div>
 					</div>
 					<!-- data table -->
-					<div class="row no-margin height95" style="overflow: hidden">
+					<div class="row no-margin height95" style="overflow: auto">
 <!-- 						<div class="col-md-12 no-padding"> -->
 							<table class="table table-results">
 						        <thead>
