updated logic of workspace locking

--- a/calc-webapp/src/main/webapp/collect-sync.html
+++ b/calc-webapp/src/main/webapp/collect-sync.html
@@ -54,8 +54,8 @@ $(function(){
 	    	$progressBar.width(percentVal);
 	    	$progressPercent.html(percentVal);
 	    },
-	    success: function ( json ) {
-	    	JobManager.getInstance().checkJobStatus(function() {
+	    success: function ( job ) {
+	    	JobManager.getInstance().start( job , function() {
 	    		homeCalculationManager.updateSteps();
 	    	});
 	    },
