--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -137,7 +137,7 @@
 								Sampling unit weight script
 							</div>
 						</div>
-						
+						<div class="row" style="padding-bottom: 2em;">(output variable weight) </div>
 						<div class="row no-margin plot-area-section">
 <!-- 							<div class="col-md-2">Plot area: </div> -->
 							<div class="col-md-12">
