--- a/calc-webapp/src/main/webapp/collect-sync.html
+++ b/calc-webapp/src/main/webapp/collect-sync.html
@@ -60,8 +60,8 @@ $(function(){
 				Calc.workspaceChange();
 	    	});
 	    },
-	    error: function (e) {
-	    	alert('Error uploading file');
+	    error: function () {
+			Calc.error.apply( this , arguments );
 	    },
 	    complete: function() {
 	    	resetForm();
