CALC-289. + started error estimation ui page

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -42,14 +42,19 @@
 		  			<div class="button-bar-left">
 		  				<div class="button-bar-inner">
 <!-- 			 				<div class="row no-margin height100" > -->
-				 				<div class="col-md-6 no-padding height100">
+				 				<div class="col-md-6 no-padding height50">
 				 					<button type="button" class="btn btn-home-plus" href="step-edit.html">
 					 					<i class="icon-plus-sign-alt icon-5"></i>
 					 				</button>
 				 				</div>
-				 				<div class="col-md-6 no-padding height100">
+				 				<div class="col-md-6 no-padding height50">
 				 					<button type="button" class="btn execute">
 					 					<i class="fa-play icon-5"></i>
+					 				</button>
+				 				</div>
+				 				<div class="col-md-offset-6 col-md-6 no-padding height50">
+				 					<button type="button" class="btn btn-home-plus" href="error-calc.html">
+					 					<img alt="" src="img/cv.png">
 					 				</button>
 				 				</div>
 <!-- 				 				<div class="col-md-6 no-padding"> -->
@@ -461,6 +466,7 @@
 	<script src="./js/calc/manager/ui/calculation-step-exec-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-results-manager.js"></script>
 	<script src="./js/calc/manager/ui/home-data-manager.js"></script>
+	<script src="./js/calc/manager/ui/error-calculation-manager.js"></script>
 	<!-- settings  -->
 	<script src="./js/calc/manager/ui/sampling-design-manager.js"></script>
 	<script src="./js/calc/manager/ui/aggregation-manager.js"></script>
