--- a/calc-webapp/src/main/webapp/error-calc.html
+++ b/calc-webapp/src/main/webapp/error-calc.html
@@ -1,11 +1,31 @@
 <div class="page-section" id="error-calculation">
 
-	
-
+	<div class="row no-margin no-padding form height60" style="padding-top: 20px; overflow: hidden;">
+		<div class="col-md-3 aoi height100">
+			<div class="width100"> Area of Interest </div>
+			<select class="form-control width75" name="aoi-select"></select>
+		</div>	
+		<div class="col-md-3 quantity height100">
+			<div class="width100"> Quantity </div>
+		</div>
+		<div class="col-md-3 category height100">
+			<div class="width100"> Category </div>
+		</div>
+		<div class="col-md-3 classes height100">
+			<div class="width100"> Category classes </div>
+		</div>
+	</div>
+	<div class="row width100 no-margin no-padding view-btn height20">
+		<button type="submit" class="btn btn-default col-md-offset-5 col-md-2 ">
+			<img alt="" src="img/cv.png" width="30" height="30">
+		</button>
+	</div>
+	<div class="row no-margin no-padding result height20">
+	</div>
 	<!-- ==== Everything has to go inside page-section === -->
 	
 	<script>
-	$(function(){
+	$(function() {
 		
 		var manager = new ErrorCalculationManager( $("#error-calculation") );
 		// Javascript here
