--- a/calc-webapp/src/main/webapp/error-calc.html
+++ b/calc-webapp/src/main/webapp/error-calc.html
@@ -21,6 +21,14 @@
 		</button>
 	</div>
 	<div class="row no-margin no-padding result height20">
+		<div class="col-md-10 col-md-offset-1">
+			<table class="table table-results">
+		        <thead>
+		        </thead>
+		        <tbody>
+		        </tbody>
+	     	</table>
+		</div>
 	</div>
 	<!-- ==== Everything has to go inside page-section === -->
 	
