error estimation java code refactor

--- a/calc-webapp/src/main/webapp/error-calc.html
+++ b/calc-webapp/src/main/webapp/error-calc.html
@@ -15,7 +15,7 @@
 			<div class="width100"> Category classes </div>
 		</div>
 	</div>
-	<div class="row width100 no-margin no-padding view-btn height20">
+	<div class="row width100 no-margin no-padding view-btn height20" style="padding-top: 25px">
 		<button type="submit" class="btn btn-default col-md-offset-5 col-md-2 ">
 			<img alt="" src="img/cv.png" width="30" height="30">
 		</button>
@@ -30,14 +30,10 @@
 	     	</table>
 		</div>
 	</div>
-	<!-- ==== Everything has to go inside page-section === -->
 	
 	<script>
 	$(function() {
-		
 		var manager = new ErrorCalculationManager( $("#error-calculation") );
-		// Javascript here
-		
 	});
 	</script>
 </div>
