started working on external equation import

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -139,7 +139,7 @@
 		  		
 		  		<!-- inventory settings -->
 		 		<div class="row group">
-		 		<div class="row group-header">
+		 			<div class="row group-header">
 			  			<div class="col-md-2 col-md-offset-2">
 			  				Inventory
 			  			</div>
@@ -148,6 +148,19 @@
 		  			<div class="row group-buttons">
 		 				<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Sampling design</button>
 		 				<button type="button" class="btn btn-default btn-home" href="aggregation.html">Aggregation</button>
+	 				</div>
+		  		</div>
+		  		
+		  		<!-- workspace settings -->
+		 		<div class="row group">
+		 			<div class="row group-header">
+			  			<div class="col-md-2 col-md-offset-2">
+			  				Workspace
+			  			</div>
+			  			<div class="col-md-7"></div>
+			  		</div>
+		  			<div class="row group-buttons">
+		 				<button type="button" class="btn btn-default btn-home" href="equation-list.html">External equations</button>
 	 				</div>
 		  		</div>
 <!-- 		  		<div class="row  height33 width100"></div> -->
@@ -467,6 +480,7 @@
 	<script src="./js/calc/manager/ui/calculation-step-results-manager.js"></script>
 	<script src="./js/calc/manager/ui/home-data-manager.js"></script>
 	<script src="./js/calc/manager/ui/error-calculation-manager.js"></script>
+	<script src="./js/calc/manager/ui/equation-list-manager.js"></script>
 	<!-- settings  -->
 	<script src="./js/calc/manager/ui/sampling-design-manager.js"></script>
 	<script src="./js/calc/manager/ui/aggregation-manager.js"></script>
