--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -20,6 +20,7 @@
 					</button>
 				</div>
 				<div class="col-md-8 height100">
+					<!-- Sampling unit selection -->
 					<div class="row option step step-0">
 						<div class="row">Sampling Unit</div>
 						<div class="row">
