equation import work in progress

--- a/calc-webapp/src/main/webapp/equation-list.html
+++ b/calc-webapp/src/main/webapp/equation-list.html
@@ -8,12 +8,18 @@
 				    <input type="file" name="file" style="display:none" />  
 				</form>
 			</div>
-			<div class=" height10">Equation lists</div>
-			<div class="equation-lists height80" style="overflow: auto;"></div>
+			<div class=" height5">Equation lists</div>
+			<div class="equation-lists height85" style="overflow: auto;"></div>
 		</div>
 	</div>
 	
-	<div class="col-md-12 height100 import-section">
+	<div class="col-md-12 height100 import-section" style="padding-top: 30px">
+		<div class="row">
+			Name : <input type="text" name="list-name" />
+		</div>
+		<div class="row col-md-2 col-md-offset-5" style="padding-top: 30px;">
+			<button type="button" class="btn btn-default width100" name="import-btn">Import</button>
+		</div>
 	</div> 
 	 
 	<script>
