--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -132,8 +132,6 @@
 		  			<div class="row group-buttons">
 			 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect</button>
 			 			<button type="button" class="btn btn-default btn-home" href="aoi.html">Areas of interest</button>
-<!-- 			 			<button type="button" class="btn btn-default btn-home" href="strata.html">Strata</button> -->
-<!-- 			 			<button type="button" class="btn btn-default btn-home" href="phase1.html">Phase 1 plots</button> -->
 		  			</div>
 		  		</div>
 		  		
@@ -160,7 +158,7 @@
 			  			<div class="col-md-7"></div>
 			  		</div>
 		  			<div class="row group-buttons">
-		 				<button type="button" class="btn btn-default btn-home" href="equation-list.html">External equations</button>
+		 				<button type="button" class="btn btn-default btn-home workspace-enabled" href="equation-list.html">External equations</button>
 	 				</div>
 		  		</div>
 <!-- 		  		<div class="row  height33 width100"></div> -->
