--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -81,7 +81,7 @@
 		  				<div class="button-bar-inner">
 <!-- 			 				<div class="row no-margin height100" > -->
 				 				<div class="col-md-12 no-padding height100">
-				 					<button type="button" class="btn delete workspace-enabled" disabled="disabled">
+				 					<button type="button" class="btn delete" disabled="disabled">
 					 					<i class="fa-trash-o icon-5"></i>
 					 				</button>
 <!-- 				 				</div> -->
@@ -131,7 +131,7 @@
 			  		</div>
 		  			<div class="row group-buttons">
 			 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect</button>
-			 			<button type="button" class="btn btn-default btn-home" href="aoi.html">Areas of interest</button>
+			 			<button type="button" class="btn btn-default btn-home workspace-enabled" href="aoi.html">Areas of interest</button>
 <!-- 			 			<button type="button" class="btn btn-default btn-home" href="strata.html">Strata</button> -->
 <!-- 			 			<button type="button" class="btn btn-default btn-home" href="phase1.html">Phase 1 plots</button> -->
 		  			</div>
@@ -146,8 +146,8 @@
 			  			<div class="col-md-7"></div>
 			  		</div>
 		  			<div class="row group-buttons">
-		 				<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Sampling design</button>
-		 				<button type="button" class="btn btn-default btn-home" href="aggregation.html">Aggregation</button>
+		 				<button type="button" class="btn btn-default btn-home workspace-enabled" href="sampling-design.html">Sampling design</button>
+		 				<button type="button" class="btn btn-default btn-home workspace-enabled" href="aggregation.html">Aggregation</button>
 	 				</div>
 		  		</div>
 <!-- 		  		<div class="row  height33 width100"></div> -->
