--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Open Foris Calc</title>
 
@@ -393,7 +394,7 @@
     <!-- ===================================================== -->
 	
 	<!-- JQuery -->
-	<script src="./js/jquery/jquery.min.js"></script>
+	<script src="./js/jquery/jquery-2.1.0.min.js"></script>
 <!-- 	<script src="./js/jquery/jquery.js"></script> -->
 	<script src="./js/jquery/plugin/jquery.form.min.js"></script>	
 	<script src="./js/jquery/plugin/jquery.easing.js"></script>	
@@ -449,6 +450,7 @@
 	<script src="./js/calc/ui/option-button.js"></script>
 	<script src="./js/calc/ui/job-status.js"></script>
 	<script src="./js/calc/ui/variable-filters.js"></script>
+	<script src="./js/calc/ui/file-upload.js"></script>
 	
 	<!-- model objects -->
 	<script src="./js/calc/model/workspace.js"></script>
