CALC-298 - Test with IE 9 and 10

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -408,7 +408,7 @@
 	<script src="./js/jquery/plugin/jquery-ui/jquery.ui.sortable.min.js"></script>
 	<!-- Url parser jqeury plugin -->
 	<script src="./js/jquery/plugin/purl.js"></script>
-	<script src="./js/jquery/plugin/jquery.caret.js"></script>
+	<script src="./js/jquery/plugin/jquery.caret-1.5.0.min.js"></script>
 	<script src="./js/jquery/plugin/typeahead.min.js"></script>
 	<!-- caret position jquery plugin -->
 	<script src="./js/jquery/plugin/caretpixelpos/cursor_position.js"></script>
