--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -430,7 +430,7 @@
 	<script src="js/d3/d3.v3.js"></script>
 	
 	<!-- chart jquery plugin -->
-	<script src="js/highcharts.js"></script>
+<!-- 	<script src="js/highcharts.js"></script> -->
 	
 	<!-- utils -->
 	<script src="./js/calc/utils/array-utils.js"></script>
