equation import completed

--- a/calc-webapp/src/main/webapp/equation-list.html
+++ b/calc-webapp/src/main/webapp/equation-list.html
@@ -13,7 +13,7 @@
 			<div class="equation-lists height85" style="overflow: auto;"></div>
 		</div>
 		
-		<div class="col-md-offset-1 col-md-9 height100">
+		<div class="col-md-offset-1 col-md-9 height100" style="overflow: auto">
 			<table class="table equations-table">
 		        <thead>
 		        	<tr>
