--- a/calc-webapp/src/main/webapp/equation-list.html
+++ b/calc-webapp/src/main/webapp/equation-list.html
@@ -9,8 +9,8 @@
 				    <input type="file" name="file" style="display:none" />  
 				</form>
 			</div>
-			<div class=" height5">Equation lists</div>
-			<div class="equation-lists height85" style="overflow: auto;"></div>
+<!-- 			<div class=" height5">Equation lists</div> -->
+			<div class="equation-lists height90" style="overflow: auto;"></div>
 		</div>
 		
 		<div class="col-md-offset-1 col-md-9 height100" style="overflow: auto">
