CALC-298 - Test with IE 9 and 10

--- a/calc-webapp/src/main/webapp/aoi.html
+++ b/calc-webapp/src/main/webapp/aoi.html
@@ -2,7 +2,7 @@
 
 	<div class="row col-md-10 col-md-offset-1 aoi-section" style="height: 100%; ">	
 		
-		<div class="row upload-section" style="height: 15%; ">
+		<div class="row upload-form-section" style="height: 15%; ">
 			<form  method="post" enctype="multipart/form-data" action="rest/csv-upload.json">
 			<div class="col-md-2 col-md-offset-5" style="padding-top: 20px;">
 				<button type="button" class="btn btn-default width100" name="upload-btn">Upload Csv</button>
@@ -11,7 +11,7 @@
 			</form>
 		</div>
 		
-		<div class="row progress-section" style="height: 15%;">
+		<div class="row upload-progress-section" style="height: 15%;">
 			<div class="col-md-2 col-md-offset-5">
 				<div class="progress">
 		        	<div class="progress-bar progress-bar-info"></div>
