--- a/calc-webapp/src/main/webapp/equation-list.html
+++ b/calc-webapp/src/main/webapp/equation-list.html
@@ -3,7 +3,7 @@
 	<div class="col-md-12 height100 view-section" style="overflow: hidden;">
 	
 		<div class="row col-md-2 list height100">
-			<div class="height10">
+			<div class="height10 upload-csv-form-section">
 				<form class="upload-csv-form"  method="post" enctype="multipart/form-data" action="rest/csv-upload.json">
 					<button type="button" class="btn btn-default width100" name="upload-btn">Upload Csv</button>
 				    <input type="file" name="file" style="display:none" />  
