--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -450,7 +450,7 @@
 	<script src="./js/calc/ui/option-button.js"></script>
 	<script src="./js/calc/ui/job-status.js"></script>
 	<script src="./js/calc/ui/variable-filters.js"></script>
-	<script src="./js/calc/ui/file-upload.js"></script>
+	<script src="./js/calc/ui/form-file-upload.js"></script>
 	
 	<!-- model objects -->
 	<script src="./js/calc/model/workspace.js"></script>
@@ -475,6 +475,7 @@
 	
 	<!-- ui managers -->
 	<script src="./js/calc/manager/ui/home-calculation-manager.js"></script>
+	<script src="./js/calc/manager/ui/collect-sync-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-edit-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-exec-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-results-manager.js"></script>
