--- a/calc-webapp/src/main/webapp/aggregation.html
+++ b/calc-webapp/src/main/webapp/aggregation.html
@@ -22,6 +22,11 @@
 <!-- 						<input type="text" name="plot-area" class="form-control"> -->
 						<textarea rows="28" cols="" name="plot-area" class="form-control"></textarea>
 					</div>
+					<div class="row">
+						<div class="col-md-4 col-md-offset-4" style="text-align: center; padding-top: 15px;">
+							<button type="button" name="save-btn" class="btn btn-default width100">Save</button>
+						</div>
+					</div>
 				</div>
 				
 				<!-- variable aggregates section -->
