started calc-step validation form

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -82,14 +82,14 @@
 							<div class="form-group">
 								<label class="col-md-2 control-label">Equation list</label>
 								<div class="col-md-10">
-									<select class="form-control" name="equation-list"></select>
+									<select class="form-control" name="equationList"></select>
 								</div>
 							</div>
 							
 							<div class="form-group">
 								<label class="col-md-2 control-label">Code variable</label>
 								<div class="col-md-10">
-									<select class="form-control" name="code-variable"></select>
+									<select class="form-control" name="codeVariable"></select>
 								</div>
 							</div>
 							
