--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -50,12 +50,12 @@
 					 				</button>
 				 				</div>
 				 				<div class="col-md-6 no-padding height50">
-				 					<button type="button" class="btn execute calculation-steps-required workspace-required">
+				 					<button type="button" class="btn execute calculation-steps-required">
 					 					<i class="fa-play icon-5"></i>
 					 				</button>
 				 				</div>
 				 				<div class="col-md-offset-6 col-md-6 no-padding height50">
-				 					<button type="button" class="btn btn-home-plus default-chain-completed-required" href="error-calc.html">
+				 					<button type="button" class="btn calculation-steps-required" href="error-calc.html">
 					 					<img alt="" src="img/cv.png">
 					 				</button>
 				 				</div>
