btn-home css class added to error button

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -55,7 +55,7 @@
 					 				</button>
 				 				</div>
 				 				<div class="col-md-offset-6 col-md-6 no-padding height50">
-				 					<button type="button" class="btn calculation-steps-required" href="error-calc.html">
+				 					<button type="button" class="btn btn-home calculation-steps-required" href="error-calc.html">
 					 					<img alt="" src="img/cv.png">
 					 				</button>
 				 				</div>
