--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -188,7 +188,7 @@
 				<div class="logo">
 					<img src="img/of-logo.png" width="30em">pen Foris Calc
 				</div>
-				<div class="application-version-wrapper">Version: <span class="application-version"></span></div>
+				<div class="application-version"></div>
 			</div>
 		</div>
 	</footer>
@@ -458,6 +458,7 @@
 	<script src="./js/calc/manager/data/variable-manager.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-manager.js"></script>
 	<script src="./js/calc/manager/data/job-manager.js"></script>
+	
 	<!-- data manipulation managers -->
 	<script src="./js/calc/manager/data/data-visualisation-manager.js"></script>
 	<script src="./js/calc/manager/data/data-visualisation-options.js"></script>
