UI: added add category modal form in calculation step edit

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -458,6 +458,7 @@
 	<script src="./js/calc/manager/data/variable-manager.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-manager.js"></script>
 	<script src="./js/calc/manager/data/job-manager.js"></script>
+	<script src="./js/calc/manager/data/category-manager.js"></script>
 	
 	<!-- data manipulation managers -->
 	<script src="./js/calc/manager/data/data-visualisation-manager.js"></script>
