included saiku into an iframe

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -59,9 +59,14 @@
 					 					<i class="fa-play icon-5"></i>
 					 				</button>
 				 				</div>
-				 				<div class="col-md-offset-6 col-md-6 no-padding height50">
+				 				<div class="col-md-6 no-padding height50">
 				 					<button type="button" class="btn btn-home calculation-steps-required" href="error-calc.html">
 					 					<img alt="" src="img/cv.png">
+					 				</button>
+				 				</div>
+				 				<div class="col-md-6 no-padding height50">
+				 					<button type="button" class="btn btn-home workspace-required" href="saiku.html">
+					 					<img alt="" src="img/xsaiku_free_small.png" width="50px" height="50px">
 					 				</button>
 				 				</div>
 <!-- 				 				<div class="col-md-6 no-padding"> -->
@@ -169,7 +174,7 @@
 	
 	<!--  ==== Footer ==== -->
 	<footer id="footer">
-		<div class="row">
+		<div class="row height100">
 			<div class="col-md-2">
 				<button type="button" class="btn default-btn back" href="#settings">
 				<i class="icon-caret-left icon-5"></i>
