Setting correctly Saiku-ui url in iFrame

--- a/calc-webapp/src/main/webapp/saiku.html
+++ b/calc-webapp/src/main/webapp/saiku.html
@@ -14,9 +14,9 @@
 		var height = $(window).height() - Calc.footer.height();		
 		iFrame.css( 'height', height);
 		
-		iFrame.src = Calc.saikuUiUrl;
+		iFrame.attr("src", Calc.saikuUiUrl);
 		
-		iFrame.fadeIn( 150 );
+		iFrame.fadeIn( 500 );
 	});
 	</script>
 </div>
