category step type tested

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -65,7 +65,7 @@
 					 				</button>
 				 				</div>
 				 				<div class="col-md-6 no-padding height50">
-				 					<button type="button" class="btn btn-home workspace-required" href="saiku.html">
+				 					<button type="button" class="btn btn-home" href="saiku.html">
 					 					<img alt="" src="img/xsaiku_free_small.png" width="50px" height="50px">
 					 				</button>
 				 				</div>
@@ -436,6 +436,7 @@
 <!-- 	<script src="js/highcharts.js"></script> -->
 	
 	<!-- utils -->
+	<script src="./js/calc/utils/utils.js"></script>
 	<script src="./js/calc/utils/array-utils.js"></script>
 	
 	<!-- ==== Custom javascript -->
