cateogry form validation.

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -262,12 +262,12 @@
 <!-- 						<input type="hidden" class="form-control" name="entityId" />  -->
 						<fieldset>
 						
-							<div class="form-group">
-								<label class="col-md-2 control-label">Name</label>
-								<div class="col-md-10">
-									<input type="text" class="form-control" name="name">
-								</div>
-							</div>
+<!-- 							<div class="form-group"> -->
+<!-- 								<label class="col-md-2 control-label">Name</label> -->
+<!-- 								<div class="col-md-10"> -->
+<!-- 									<input type="text" class="form-control" name="name"> -->
+<!-- 								</div> -->
+<!-- 							</div> -->
 							<div class="form-group">
 								<label class="col-md-2 control-label">Caption</label>
 								<div class="col-md-10">
