updated history js. eq list validation per ws

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -185,9 +185,9 @@
 	<footer id="footer">
 		<div class="row height100">
 			<div class="col-md-2">
-				<button type="button" class="btn default-btn back" href="#settings">
-				<i class="icon-caret-left icon-5"></i>
-				</button>
+<!-- 				<button type="button" class="btn default-btn back" href="#settings"> -->
+<!-- 				<i class="icon-caret-left icon-5"></i> -->
+<!-- 				</button> -->
 			</div>
 			<div class="col-md-6 col-md-offset-1" >
 				<div class="links">
