error estimation enabled only for 2phases/cluster/stratified sampling design

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -60,7 +60,8 @@
 					 				</button>
 				 				</div>
 				 				<div class="col-md-6 no-padding height50">
-				 					<button type="button" class="btn btn-home calculation-steps-required" href="error-calc.html">
+<!-- 				 					<button type="button" class="btn btn-home calculation-steps-required" href="error-calc.html"> -->
+				 					<button type="button" class="btn btn-home error-button" href="error-calc.html">
 					 					<img alt="" src="img/cv.png">
 					 				</button>
 				 				</div>
